// Copyright (C) 2024 Quickwit, Inc.
//
// Quickwit is offered under the AGPL v3.0 and as commercial software.
// For commercial licensing, contact us at hello@quickwit.io.
//
// AGPL:
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program. If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package quickwit.cluster;

message ChitchatId {
  string node_id = 1;
  uint64 generation_id = 2;
  string gossip_advertise_addr = 3;
}

enum DeletionStatus {
    Set = 0;
    Deleted = 1;
    DeleteAfterTtl = 2;
}

message VersionedKeyValue {
  string key = 1;
  string value = 2;
  uint64 version = 3;
  DeletionStatus status = 4;
}

message NodeState {
  ChitchatId chitchat_id = 1;
  repeated VersionedKeyValue key_values = 2;
  uint64 max_version = 3;
  uint64 last_gc_version = 4;
}

service ClusterService {
  rpc FetchClusterState(FetchClusterStateRequest) returns (FetchClusterStateResponse);
}

message FetchClusterStateRequest {
  string cluster_id = 1;
}

message FetchClusterStateResponse {
  string cluster_id = 1;
  repeated NodeState node_states = 2;
}
